[package]
name = "poem-casbin-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.20.0", features = ["rt-multi-thread", "macros"] }
poem = "1.3.35"
poem-casbin-auth = { git = "https://github.com/casbin-rs/poem-casbin.git" }